--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "eslint-plugin-react": "^7.13.0",
     "prettier": "^1.17.0",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-cli": "^3.3.1"
   }
 }
